# bench-parser

./: Cargo.toml  README.md
.github/workflows/: release.yml
data/: result.csv  results.csv
src/: cli.rs  main.rs  parser.rs  types.rs
tests/data/: results.csv
