[package]
name = "bench-parser"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.*"
clap = { version = "3.*", features = ["cargo"] }
lazy_static = "1.4.*"
regex = "1.6.*"
chrono = "0.4.*"
